Fix spacing issues on about page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5517,9 +5517,12 @@ h2 {
   margin: 3px 0 13px 0;
   line-height: 1em;
 }
-h2.thanks {
+div.thanks h2 {
   background-color: #f7941d;
   color: #ffffff;
+  padding: 8px;
+}
+div.thanks h4 {
   padding: 8px;
 }
 h2.map {
