--- a/less/scaleconf.less
+++ b/less/scaleconf.less
@@ -168,12 +168,18 @@ h2
     margin: 3px 0 13px 0;
     line-height: 1em;
 }
-h2.thanks
+div.thanks h2
 {
     background-color: #f7941d;
     color: @white;
     padding: 8px;
 }
+
+div.thanks h4
+{
+    padding: 8px;
+}
+
 h2.map
 {
     background-color: @ScaleConfBackground;
@@ -190,6 +196,9 @@ h3
     line-height: 36px;
     font-size: 28px;
 }
+
+
+
 span.orange
 {
     color: #f7941d;
